cmake_minimum_required(VERSION 3.9)
project(3d-pseudo-diffusion VERSION 1.0 DESCRIPTION "Multiscale Universal Interface Demo 07" LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

find_package(MPI REQUIRED)
find_package(MUI REQUIRED)
find_package (Eigen3 REQUIRED NO_MODULE)

if (TARGET Eigen3::Eigen)
    include_directories(${MPI_INCLUDE_PATH})
    if(MUI_BASE_DIR)
      include_directories(${MUI_INCLUDE_DIR})
    endif()

    add_executable(3D-pseudo-diffusion-standalone 3D-pseudo-diffusion-standalone.cpp)
    add_executable(3D-pseudo-diffusion-coarse 3D-pseudo-diffusion-coarse.cpp)
    add_executable(3D-pseudo-diffusion-fine 3D-pseudo-diffusion-fine.cpp)
    target_compile_definitions(3D-pseudo-diffusion-coarse PRIVATE USE_RBF)
    target_compile_definitions(3D-pseudo-diffusion-fine PRIVATE USE_RBF)
    target_link_libraries(3D-pseudo-diffusion-coarse ${MPI_CXX_LIBRARIES} ${MPI_C_LIBRARIES} Eigen3::Eigen)
    target_link_libraries(3D-pseudo-diffusion-fine ${MPI_CXX_LIBRARIES} ${MPI_C_LIBRARIES} Eigen3::Eigen)
else()
    message(FATAL_ERROR "Please point the path of Eigen3 as '-DEigen3_DIR=/path/to/your/eigen3/cmake/' to the include directory of your Eigen installation.")
    return ()
endif(TARGET Eigen3::Eigen)
